SET( LIBSORT_SRC sort.cpp)

ADD_LIBRARY(sort SHARED ${LIBSORT_SRC})

ADD_LIBRARY(sort_static STATIC ${LIBSORT_SRC})

SET_TARGET_PROPERTIES(sort_static PROPERTIES OUTPUT_NAME "sort")

SET_TARGET_PROPERTIES( sort PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES( sort_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(sort PROPERTIES VERSION 1.2 SOVERSION 1)

add_executable( main main.cpp)

target_link_libraries( main sort)

